compiler/testData/cli/jvm/jspecifyDefault.out
compiler/testData/cli/jvm/jspecifyUsage.kt:2:11: error: null cannot be a value of a non-null type 'kotlin.String'.
    a.foo(null)
          ^
COMPILATION_ERROR
